--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ rmp-serde = "1.3"
 bytes = "1.7"
 
 # Database & persistence
-sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "macros", "uuid", "chrono"] }
+sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate", "uuid", "chrono"] }
 uuid = { version = "1.10", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 
